--- a/DATN - ADMIN/package.json
+++ b/DATN - ADMIN/package.json
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "admin": "file:",
+    "axios": "^1.7.7",
+    "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.4.6",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.27.0",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -25,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
+    "nodemon": "^3.1.7",
     "vite": "^5.4.10"
   }
 }
