--- a/DATN - BackEnd/Utech-API/package.json
+++ b/DATN - BackEnd/Utech-API/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,6 +18,9 @@
     "mongodb": "^6.5.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0"
+    "next": "^15.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
