--- a/DATN - BackEnd/package.json
+++ b/DATN - BackEnd/package.json
@@ -6,7 +6,10 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.21.0",
+    "config": "^3.3.12",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,10 +18,15 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "lab1": "file:",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "next": "^15.0.3"
+    "multer-storage-cloudinary": "^4.0.0",
+    "next": "^15.0.3",
+    "nodemailer": "^6.9.16",
+    "qs": "^6.13.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
