--- a/DATN - ADMIN/package.json
+++ b/DATN - ADMIN/package.json
@@ -17,9 +17,12 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.9.0",
+    "react-toastify": "^11.0.2",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
