--- a/DATN - FrontEnd/package.json
+++ b/DATN - FrontEnd/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "datn---component": "file:",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
-    "sweetalert2": "^11.15.10",
+    "sweetalert2": "^11.15.5",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
