--- a/DATN - FrontEnd/package.json
+++ b/DATN - FrontEnd/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.15.5",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
