--- a/DATN - FrontEnd/package.json
+++ b/DATN - FrontEnd/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "datn---component": "file:",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook-login": "^4.1.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.15.5",
