--- a/DATN - FrontEnd/package.json
+++ b/DATN - FrontEnd/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "datn---component": "file:",
+    "install": "^0.13.0",
+    "npm": "^11.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-facebook-login": "^4.1.1",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.15.5",
     "swiper": "^11.1.14",
